# modulellm_maniax

./: Notice_Correction.md  README.md
02_ModuleLLM_Start/: camera_streaming.py  modulellm_led.py
03_StackFlow_for_Python/: README.md  Whisper_VAD.py  llm-llama3.2-1B.py  llm-openbuddy-llama3.2-1B.py  llm-qwen2.5-0.5B.py  llm-qwen2.5-1.5B.py  sys-bashexec-intaraction.py  sys-bashexec.py  sys-hwinfo.py  sys-lsmode.py  sys-lstask.py  sys-ping.py  sys-reboot.py  sys-reset.py  sys-version.py  tts_melotts_talk.py  tts_talk.py
04_NPU_Programming_Python/: README.md  ax_depth_anything.py  ax_depth_anything_camera_stream.py  ax_mobilenetv2.py  ax_mobilenetv2_camera_stream.py  ax_yolo11n.py  ax_yolo11n_camera_stream.py
05_NPU_Programming_cpp/: README.md
05_NPU_Programming_cpp/ax_classification/: CMakeLists.txt  ax_classification_example.cpp
05_NPU_Programming_cpp/ax_depth_anything/: CMakeLists.txt  ax_depth_anything_image.cpp
05_NPU_Programming_cpp/ax_depth_anything_video_stream/: CMakeLists.txt  ax_depth_anything_camera_stream.cpp
05_NPU_Programming_cpp/camera_streaming/: CMakeLists.txt  camera_streaming.cpp
06_Pulsar2_ModelConvert/: 01_mobilenet_v2_onnx_export.py  02_yolo11_cut_onnx.py  02_yolo11_onnx_export.py  03_calibdata_gen.py  03_matmul_model_export.py  README.md
06_Pulsar2_ModelConvert/03_matmul_model_run_ModuleLLM/: axmodel_run.py  onnx_matmul.axmodel  onnx_matmul.onnx  onnxrutime_run.py
06_Pulsar2_ModelConvert/config/: matmul_model.json  mobilenet_v2_config.json  yolo11_config.json
06_Pulsar2_ModelConvert/dataset/: matrix_data.tar  points_data.tar
07_Pulsar2_llm_build/: README.md  llm-TinySwallow-1.5B.py  llm-TinySwallow-1_5B.ino  llm-TinySwallow-1_5B.py  llm-TinySwallow-1_5B_arduino.ino
07_Pulsar2_llm_build/stackflow/m5stack/data/models/: mode_TinySwallow-1.5B.json
